# DynastysDefender-ScrollsCurse

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
resources/settings/: config.json
resources/shaders/: discard.fs  discard.vs  particle.vs  post_processing.fs  post_processing.vs  pure_color.vs  ray.fs  scroll.fs  scroll.vs  sprite.fs  sprite.vs  text_2d.fs
resources/text/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  pt-PT.json  ru.json  zh-Hans.json  zh-Hant.json
src/: Arrow.cpp  Arrow.h  Block.h  Board.h  Bubble.cpp  Bubble.h  Button.cpp  Button.h  CJKTextRenderer.cpp  CJKTextRenderer.h  CMakeLists.txt  Capsule.cpp  Capsule.h  CircleRenderer.cpp  CircleRenderer.h  ColorRenderer.cpp  ConfigManager.cpp  ConfigManager.h  ContentUnit.cpp  ContentUnit.h  ExplosionSystem.cpp  ExplosionSystem.h  GameBoard.cpp  GameBoard.h  GameCharacter.cpp  GameCharacter.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Health.cpp  Health.h  LineRenderer.cpp  Main.cpp  Main.h  Page.cpp  Page.h  PageSection.cpp  PageSection.h  PartialTextureRenderer.cpp  (+40 more)
src/core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ResourceManager.cpp  ResourceManager.h  ScissorBoxHandler.cpp  ScissorBoxHandler.h  SoundEngine.cpp  SoundEngine.h  StreamPlayer.cpp  StreamPlayer.h  ThreadHandler.cpp  ThreadHandler.h
src/entities/: Arrow.cpp  Arrow.h  Bubble.cpp  Bubble.h  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameCharacter.cpp  GameCharacter.h  Health.cpp  Health.h  PowerUp.cpp  PowerUp.h  Ray.cpp  Ray.h  Scroll.cpp  Scroll.h  Shooter.cpp  Shooter.h
src/entities/base/: CMakeLists.txt  Capsule.cpp  Capsule.h  GameObject.cpp  GameObject.h
src/particles/: ExplosionSystem.cpp  ExplosionSystem.h  ParticleSystem.cpp  ParticleSystem.h  ShadowTrailSystem.cpp  ShadowTrailSystem.h
src/post_processing/: PostProcessor.cpp  PostProcessor.h
src/rendering/: CJKTextRenderer.cpp  CJTextRenderer.cpp  CJTextRenderer.h  CMakeLists.txt  CircleRenderer.cpp  CircleRenderer.h  ColorRenderer.cpp  ColorRenderer.h  LineRenderer.cpp  LineRenderer.h  PartialTextureRenderer.cpp  RayRenderer.cpp  RayRenderer.h  Renderer.cpp  Renderer.h  SpriteDynamicRenderer.cpp  SpriteDynamicRenderer.h  SpriteRenderer.cpp  TextRenderer.cpp  WesternTextRenderer.cpp  WesternTextRenderer.h
src/ui/: Button.cpp  Button.h  CMakeLists.txt  ContentUnit.cpp  ContentUnit.h  Page.cpp  Page.h  PageSection.cpp  PageSection.h  Text.cpp  Text.h
src/utils/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h
src2/: Arrow.cpp  Arrow.h  Bubble.cpp  Bubble.h  Button.cpp  Button.h  Capsule.h  CircleRenderer.cpp  CircleRenderer.h  ColorRenderer.cpp  ColorRenderer.h  GameBoard.h  GameCharacter.cpp  GameManager.cpp  GameManager.h  GameObject.h  Health.cpp  Health.h  LineRenderer.h  PageSection.cpp  PartialTextureRenderer.h  ParticleSystem.h  PostProcessor.h  RayRenderer.cpp  ResourceManager.cpp  ResourceManager.h  ScissorBoxHandler.h  Scroll.h  Shader.cpp  Shader.h  ShadowTrailSystem.cpp  Shooter.cpp  SpriteDynamicRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  TextRenderer.h  Texture.cpp
